testing/error/error4.inp
* I II III IV V ABCD
No reflector hehe
